syntax = "proto3";

option java_package = "com.github.veithen.daemon.launcher.proto";
option java_multiple_files = true;

import "google/protobuf/descriptor.proto";

message Initialize {
    repeated string classpath_entry = 1;
}

message Start {
    repeated string daemon_arg = 1;
    repeated string test_classpath_entry = 2;
}

message Stop {}

message DaemonRequest {
    oneof request {
        Initialize initialize = 1;
        Start start = 2;
        Stop stop = 3;
    }
}

message Initialized {
    string configuration_type = 1;
    google.protobuf.FileDescriptorProto file_descriptor = 2;
}

message Ready {}

message Stopped {}

message DaemonResponse {
    oneof response {
        Initialized initialized = 1;
        Ready ready = 2;
        Stopped stopped = 3;
    }
}
